--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  hello word
+
+  <!-- header section design --------------------------------------------------->
+  <header class="header">
+    <a href="#" class="logo">
+      <img src="./assets/logo-navbar.png" alt="logo-img">
+    </a>
+    <nav class="navbar">
+      <a href="#">Features</a>
+      <a href="#">How It Works</a>
+      <a href="#">Why It's Different</a>
+    </nav>
+    <button class="btn">Get Early Access</button>
+  </header>
+  
 </body>
 </html>
