--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>knowledge vault</title>
+  <!-- box-icon -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <!-- custom css -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -21,6 +23,26 @@
     </nav>
     <button class="btn">Get Early Access</button>
   </header>
+
+  <!-- home section design --------------------------------------------------->
+  <section class="home">
+    <div class="home-content">
+      <div class="access-btn">
+        <input type="radio" name="" id="access">
+        <label for="access">Early Access Now Open</label>
+      </div>
+      <h1 class="same">Structured Thinking,</h1>
+      <h1 class="same main">Not Just Note-Taking.</h1>
+      <p>A Private space to store notes, link and learning summary-designed to <br> help you think clearly, connect idea and turn learning into long-term knowledge.</p>
+      <div class="home-btn">
+        <a href="#" class="btn">Start Building Your Vault <i class='bx bx-right-arrow-alt'></i></a>
+        <a href="#" class="btn"> <i class='bx bx-right-arrow' ></i>See How It Works</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- notes section design --------------------------------------------------->
   
+
 </body>
 </html>
