something section complet code

--- a/index.html
+++ b/index.html
@@ -42,7 +42,66 @@
   </section>
 
   <!-- notes section design --------------------------------------------------->
-  
+  <section class="note">
+    <div class="heading-text">
+      <h2 class="title">Not's Don't Fail, Structure Does.</h2>
+      <p>You're not bad at learning. Your tools just weren't build for how knowledge  actually works.</p>
+    </div>
+    <div class="note-box">
+      <div class="note-items">
+        <i class='bx bxs-layer'></i>
+        <h3>Scattered Notes</h3>
+        <p>Your ideas live in 10 different apps, none of them connect.</p>
+      </div>
+      <div class="note-items">
+        <i class='bx bx-bookmarks'></i>
+        <h3>Bookmark Overload</h3>
+        <p>Hundreds of saved links you'll never revisit or remember</p>
+      </div>
+      <div class="note-items">
+        <i class='bx bx-brain' ></i>
+        <h3>No Idea Connections</h3>
+        <p>Inside stay isolated, never building into bigger understanding.</p>
+      </div>
+      <div class="note-items">
+        <i class='bx bx-info-circle'></i>
+        <h3>Forgetting What Yor Learned</h3>
+        <p>Knowledge fades because there's no system to retain it.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- brain section design --------------------------------------------------->
+  <section class="brain">
+    <div class="brain-img">
+      <img src="./assets/knowledge.png" alt="brain-img">
+    </div>
+    <div class="brain-text">
+      <small>The Solution</small>
+      <h2 class="title">Your Second Brain, <br> Structured By Design.</h2>
+      <p>Personal Knowledge Vault isn't another note-taking app. zIt's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+      <ul>
+        <li><i class='bx bx-check'></i> Capture ideas with structure built-in from day one</li>
+        <li><i class='bx bx-check'></i> Connect related concepts automatically as you write</li>
+        <li><i class='bx bx-check'></i> Build lasting knowledge through reflection prompts</li>
+        <li><i class='bx bx-check'></i> Find anything instantly with semantic search</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- think more section design --------------------------------------------------->
+  <section class="think-more">
+    <div class="thing-content">
+      <div class="heading-text">
+        <h2 class="title">Ready To Thing More Clearly?</h2>
+        <p>Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.</p>
+      </div>
+      <div class="thing-box">
+        <a href="#" class="btn">Get Early Access<i class='bx bx-right-arrow-alt'></i></a>
+        <p>Free during early access • No credit card needed</p>
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
