my webstie complete code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- box-icon -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <!-- custom css -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -102,6 +102,23 @@
       </div>
     </div>
   </section>
+
+  <!-- footer section design --------------------------------------------------->
+  <footer class="footer">
+    <div class="footer-content">
+      <a href="#" class="logo"><img src="./assets/logo-footer.png" alt=""></a>
+      <div class="social-icon">
+        <h5>Social Links</h5>
+        <a href="#"><i class='bx bxl-facebook'></i></a>
+        <a href="#"><i class='bx bxl-instagram'></i></a>
+        <a href="#"><i class='bx bxl-linkedin'></i></a>
+      </div>
+    </div>
+    <hr>
+    <div class="copy-right">
+      <p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+    </div>
+  </footer>
 
 </body>
 </html>
